[gd_scene load_steps=11 format=3 uid="uid://b8nqwq0tyly70"]

[ext_resource type="Script" path="res://Enemy/enemy.gd" id="1_ev382"]
[ext_resource type="PackedScene" uid="uid://b3atgfee1ucsy" path="res://Utility/hurt_box.tscn" id="3_0kd13"]
[ext_resource type="PackedScene" uid="uid://dnbx3cqcup7g1" path="res://Utility/hit_box.tscn" id="4_d883j"]
[ext_resource type="AudioStream" uid="uid://drygjx7deb1wa" path="res://Enemy/SoundEffects/enemy_hit.ogg" id="5_o1y1b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r0l2q"]
size = Vector2(10, 17)

[sub_resource type="Animation" id="Animation_rgoh2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_lppvf"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p8jn3"]
_data = {
"RESET": SubResource("Animation_rgoh2"),
"walk": SubResource("Animation_lppvf")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3mrw0"]
size = Vector2(17, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_frs28"]
size = Vector2(26, 28)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 4
motion_mode = 1
script = ExtResource("1_ev382")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 3.5)
shape = SubResource("RectangleShape2D_r0l2q")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p8jn3")
}

[node name="HurtBox" parent="." instance=ExtResource("3_0kd13")]
collision_mask = 4

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0.5, 1.5)
shape = SubResource("RectangleShape2D_3mrw0")

[node name="HitBox" parent="." groups=["attack"] instance=ExtResource("4_d883j")]
collision_layer = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(1, 2)
shape = SubResource("RectangleShape2D_frs28")

[node name="SoundHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_o1y1b")
volume_db = -20.0

[node name="SingleFrameMoveTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]

[editable path="HurtBox"]
[editable path="HitBox"]
